service.yaml
apiVersion: v1
kind: Service
metadata:
    name: webapp-srv
spec:
    ports:
        - targetPort: 32777
          port: 80
    selector:
        app: webapp-pod
