ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  rules:
  - host: minikube.ingress
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-srv
            port:
              number: 80
